Fix img gap

--- a/themes/vlvd/source/css/style.scss
+++ b/themes/vlvd/source/css/style.scss
@@ -10,6 +10,10 @@ $mdc-top-app-bar-icon-ink-color: rgb(0, 0, 0);
 
 body {
   font-family: Arial, "文泉驛正黑", "WenQuanYi Zen Hei", "儷黑 Pro", "LiHei Pro", "微軟正黑體", "Microsoft JhengHei", sans-serif;
+
+  img {
+    vertical-align: bottom;
+  }
 }
 
 article {
